@@ -1,13 +1,11 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Math-String
-version:      1.25
+--- #YAML:1.0
+name: Math-String
+version: 1.27
 version_from: lib/Math/String.pm
-installdirs:  site
-license:      perl
-requires:
-    Math::BigFloat:                1.47
-    Math::BigInt:                  1.73
-
+license: perl
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: Math-String version 1.27
+installdirs: site
+requires:
+  Math::BigFloat: 1.48
+  Math::BigInt: 1.74
